--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,50 @@ body {
   font-weight: bold;
   font-size: 18px;
 }
+
+/* background images */
+.home-container{
+  background-image: url('./images/Rectangle 72.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 800px;
+  top: 34px;
+  width: 1704px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.aboutus-container{
+  position: relative;
+  background-image: url('./images/Rectangle 71.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+  padding: 30px 0;
+  margin-bottom: 100px;
+}
+
+.services-container{
+  background-image: url('./images/flies-bg-image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 685px;
+  padding: 90px;
+  box-sizing: border-box;
+}
+
+.review-container{
+ background-image: url('./images/Rectangle 83.png');
+ background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ width: 100vw;
+ padding: 50px 0;
+ padding-inline: 150px;
+}
